k8s/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: restaurant
  labels:
    app.kubernetes.io/name: restaurant
