k8s/app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      containers:
      - env:
        - name: MONGO_URI
          value: mongodb://root:SUPER_SECRET_PASSWORD@mongo:27017/restaurant
        image: quay.io/alex_blazh/the-real-devops-challenge-app:latest
        name: app
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
