k8s/deployment-restaurant-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: restaurant-api
  name: restaurant-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-api
  template:
    metadata:
      labels:
        app: restaurant-api
    spec:
      containers:
      - image: amoragon/restaurant-api:v0.1.0
        name: restaurant-api
        ports:
        - containerPort: 8080
      - image: amoragon/restaurant-mongo:v0.1.0
        name: mongo
        ports:
        - containerPort: 27017
