k8s/mongo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mongo
    spec:
      containers:
      - env:
        - name: MONGO_INITDB_DATABASE
          value: restaurant
        - name: MONGO_INITDB_ROOT_PASSWORD
          value: SUPER_SECRET_PASSWORD
        - name: MONGO_INITDB_ROOT_USERNAME
          value: root
        image: quay.io/alex_blazh/the-real-devops-challenge-mongo:4.0.5-xenial
        name: mongo
        ports:
        - containerPort: 27017
        resources: {}
      restartPolicy: Always
status: {}
