k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  type: LoadBalancer
  ports:
  - name: "8080"
    port: 8080
    nodePort: 30000
    # targetPort: 8080
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
