k8s/service-restaurant-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: restaurant-api
  name: restaurant-api
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: restaurant-api
  type: ClusterIP
