k8s/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: restaurant-ingress
  namespace: restaurant
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/v1/restaurant
        backend:
          serviceName: restaurant-service
          servicePort: 8080
      - path: /api/v1/restaurant/*
        backend:
          serviceName: restaurant-service
          servicePort: 8080
